---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: '@github/mycompany/components:main' is an unstable reference. Use a pinned version.
   ╭─[ <TEMP_DIR>/pcb.toml:3:16 ]
 3 │mycomponents = "@github/mycompany/components:main"
   │                                ╰────────────────── '@github/mycompany/components:main' is an unstable reference. Use a pinned version.
   ├─[ <TEMP_DIR>/board.zen:2:19 ]
 2 │SimpleResistor1 = Module("@mycomponents/SimpleResistor.zen")
   │                                       ╰───────────────────── '@mycomponents' is an unstable reference. Use a pinned version.

✓ board.zen (3 components)
